<resources>
    <string name="app_name">InventoryApp</string>
    <string name="add_button">Upload Item Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_hint">Product</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="retailer">Retailer</string>
    <string name="retailer_hint">Retailer name</string>
    <string name="make_an_order">Make an Order</string>
    <string name="first_screen_text1">Oops cart is empty!</string>
    <string name="first_screen_text2">Lets add some items.</string>
    <string name="edition_activity_title_page1">Add Item</string>
    <string name="edition_activity_title_page2">Edit Item</string>
    <string name="Remove">Remove</string>
    <string name="Save">Save</string>
    <string name="action_remove_all">Remove All</string>
    <string name="insert_item_fail_msg">Insertion Failed</string>
    <string name="insert_item_sucessfull">Item Inserted Sucessfully</string>
    <string name="update_item_failed_msg">Updation Failed</string>
    <string name="update_item_sucess_msg">Updated Sucessfully</string>
    <string name="Cancel">Cancel</string>
    <string name="delete_message">Do You Want To Delete</string>
    <string name="unsaved_changes_msg">Discard your changes and quit editing?</string>
    <string name="discard_changes">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="remove_item_failed">Error while removing items</string>
    <string name="remove_item_sucess">Item Removed</string>

</resources>
